改善換頁動畫 & 更新license

--- a/Flex_Example/index.html
+++ b/Flex_Example/index.html
@@ -154,7 +154,7 @@
             <div class="text ts-container is-fluid is-padded" id="inner_text">
 
                 <!-- 內容注入點 -->
-                <script>
+                <script flg="0">
                     url('page/iframe.html');
                 </script>
                 <!-- 內容注入尾 -->
