--- a/Flex_Example/python/icosahedron/icosahedron.html
+++ b/Flex_Example/python/icosahedron/icosahedron.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <!-- From: https://github.com/pyscript/examples/tree/main/icosahedron -->
+<!-- Apache-2.0 license: https://www.apache.org/licenses/LICENSE-2.0 -->
+<!-- 只保留主要功能 (main.py) -->
 
 <head>
     <!-- Recommended meta tags -->
