更新網頁內容

--- a/Flex_Example/index.html
+++ b/Flex_Example/index.html
@@ -28,7 +28,7 @@
     <!-- http://prototypejs.org -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prototype/1.7.3/prototype.js" integrity="sha512-9Sxlz9DC2Z4SewnMV2jzeYr/N0psEmZRQAUk5cUpE3fLY2Ml32VsprA9PsKj+kT7OGUn+VZRstS+Z0bbtpH46g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- PyScript alpha -->
+    <!-- PyScript -->
     <!-- https://pyscript.net -->
     <link rel="stylesheet" href="https://pyscript.net/releases/2023.11.2/core.css">
     <script type="module" src="https://pyscript.net/releases/2023.11.2/core.js"></script>
@@ -104,17 +104,8 @@
                         </div>
                     </div>
 
-                    <!-- <div class="flex has-sub">
-                        <div class="item">快打 C++：現代模式</div>
-                        <div class="flex colnum sub">
-                            <div class="item">⬇🔵　⬇🔵🔵　⬇↘➡🔴</div>
-                            <div class="item">如何當個快樂 DI 人？</div>
-                            <div class="item">Library 123，立回好簡單！</div>
-                        </div>
-                    </div> -->
-
                     <div class="item" onclick="url('page/iframe.html')">🎮 PyScript demos</div>
-                    <div class="item" onclick="url('page/demo.html')">💻 Demo page</div>
+                    <div class="item" onclick="url('page/demo.html')">💻 Demo：關於本站</div>
                 </div>
                 <!-- 其他文章 end -->
 
@@ -155,7 +146,7 @@
 
                 <!-- 內容注入點 -->
                 <script flg="0">
-                    url('page/iframe.html');
+                    url('page/demo.html');
                 </script>
                 <!-- 內容注入尾 -->
 
